src/objects/KB_Detail__c.object
<CustomObject>
    <fields>
        <fullName>AG_Ice__c</fullName>
        <description>AG_Ice</description>
        <label>AG_Ice</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <description>Address</description>
        <label>Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appl_Dsgn__c</fullName>
        <description>Appl_Dsgn</description>
        <label>Appl_Dsgn</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <description>Application_Type</description>
        <label>Application_Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billingispge__c</fullName>
        <description>Billingispge</description>
        <label>Billingispge</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billonaccount__c</fullName>
        <description>Billonaccount</description>
        <label>Billonaccount</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Activity__c</fullName>
        <description>Bus_Activity</description>
        <label>Bus_Activity</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Act__c</fullName>
        <description>Business_Act</description>
        <label>Business_Act</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buy_America__c</fullName>
        <description>Buy_America</description>
        <label>Buy_America</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ByPass_Letters__c</fullName>
        <description>ByPass_Letters</description>
        <label>ByPass_Letters</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canceled__c</fullName>
        <description>Canceled</description>
        <label>Canceled</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Con_1P_Hpeach__c</fullName>
        <description>Con_1P_Hpeach</description>
        <label>Con_1P_Hpeach</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Con_1P_Motors__c</fullName>
        <description>Con_1P_Motors</description>
        <label>Con_1P_Motors</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Con_3P_Hpeach__c</fullName>
        <description>Con_3P_Hpeach</description>
        <label>Con_3P_Hpeach</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Con_3P_Motors__c</fullName>
        <description>Con_3P_Motors</description>
        <label>Con_3P_Motors</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Constr_Stdate__c</fullName>
        <description>Constr_Stdate</description>
        <label>Constr_Stdate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <label>County</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cross_Street__c</fullName>
        <description>Cross_Street</description>
        <label>Cross_Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EA_SalesDoc__c</fullName>
        <description>EA_SalesDoc</description>
        <label>EA_SalesDoc</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elec_Fac_Type__c</fullName>
        <description>Elec_Fac_Type</description>
        <label>Elec_Fac_Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ev_Req__c</fullName>
        <description>Ev_Req</description>
        <label>Ev_Req</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Visit__c</fullName>
        <description>Field_Visit</description>
        <label>Field_Visit</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floors__c</fullName>
        <description>Floors</description>
        <label>Floors</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gas_Meter_Acc__c</fullName>
        <description>Gas_Meter_Acc</description>
        <label>Gas_Meter_Acc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gas_Pipe_Ins__c</fullName>
        <description>Gas_Pipe_Ins</description>
        <label>Gas_Pipe_Ins</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gas_Pressure__c</fullName>
        <description>Gas_Pressure</description>
        <label>Gas_Pressure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Glob_Meet_Dat__c</fullName>
        <description>Glob_Meet_Dat</description>
        <label>Glob_Meet_Dat</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Greenbook_Req__c</fullName>
        <description>Greenbook_Req</description>
        <label>Greenbook_Req</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Half_Gas_Press__c</fullName>
        <description>Half_Gas_Press</description>
        <label>Half_Gas_Press</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JobOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>JobOwner</description>
        <label>JobOwner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>KB Details</relationshipLabel>
        <relationshipName>KB_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KBObjNumber__c</fullName>
        <label>KBObject Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Load_Amt__c</fullName>
        <description>Load_Amt</description>
        <label>Load_Amt</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Load_Assessment__c</fullName>
        <description>Load_Assessment</description>
        <label>Load_Assessment</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Sale__c</fullName>
        <description>Lot_Sale</description>
        <label>Lot_Sale</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Switch_Size__c</fullName>
        <description>Main_Switch_Size</description>
        <label>Main_Switch_Size</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Main_Wrkcntr__c</fullName>
        <description>Main_Wrkcntr</description>
        <label>Main_Wrkcntr</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mbtu_Total__c</fullName>
        <description>Mbtu_Total</description>
        <label>Mbtu_Total</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Servloc_E__c</fullName>
        <description>Meter_Servloc_E</description>
        <label>Meter_Servloc_E</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meter_Servloc_G__c</fullName>
        <description>Meter_Servloc_G</description>
        <label>Meter_Servloc_G</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Motorcode1__c</fullName>
        <description>Motorcode1</description>
        <label>Motorcode1</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motorcode2__c</fullName>
        <description>Motorcode2</description>
        <label>Motorcode2</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Motorcode3__c</fullName>
        <description>Motorcode3</description>
        <label>Motorcode3</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Load__c</fullName>
        <description>Muni_Load</description>
        <label>Muni_Load</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Setby__c</fullName>
        <description>Muni_Setby</description>
        <label>Muni_Setby</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Muni_Setdate__c</fullName>
        <label>Muni_Setdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Muni_Settime__c</fullName>
        <description>Muni_Settime</description>
        <label>Muni_Settime</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Naics_Code__c</fullName>
        <description>Naics_Code</description>
        <label>Naics_Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Main_Switch_Size__c</fullName>
        <description>New_Main_Switch_Size</description>
        <label>New_Main_Switch_Size</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifChangedBy__c</fullName>
        <description>NotifChangedBy</description>
        <label>NotifChangedBy</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifChangedDate__c</fullName>
        <description>NotifChangedDate</description>
        <label>NotifChangedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotifCreatedBy__c</fullName>
        <description>NotifCreatedBy</description>
        <label>NotifCreatedBy</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NotifCreatedDate__c</fullName>
        <description>NotifCreatedDate</description>
        <label>NotifCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NotificationNum__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NotificationNum</description>
        <label>NotificationNum</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipLabel>KB Details (NotificationNum)</relationshipLabel>
        <relationshipName>KB_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Number</label>
        <referenceTo>Notifications__c</referenceTo>
        <relationshipName>KB_Object_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nps_Lo__c</fullName>
        <description>Nps_Lo</description>
        <label>Nps_Lo</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_Of_Meters_E__c</fullName>
        <description>Num_Of_Meters_E</description>
        <label>Num_Of_Meters_E</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Of_Meters_G__c</fullName>
        <description>Num_Of_Meters_G</description>
        <label>Num_Of_Meters_G</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_Bldgs__c</fullName>
        <description>Number_Bldgs</description>
        <label>Number_Bldgs</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Lots__c</fullName>
        <description>Number_Lots</description>
        <label>Number_Lots</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjNumber__c</fullName>
        <label>Object Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oktoserve__c</fullName>
        <description>Oktoserve</description>
        <label>Oktoserve</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oktoservedate__c</fullName>
        <description>Oktoservedate</description>
        <label>Oktoservedate</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Gas_Press__c</fullName>
        <description>One_Gas_Press</description>
        <label>One_Gas_Press</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Number</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipName>KB_Object_Details1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Gas_Press__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other_Gas_Press</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Gas__c</fullName>
        <description>Other_Gas</description>
        <label>Other_Gas</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Load_E__c</fullName>
        <description>Other_Load_E</description>
        <label>Other_Load_E</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parcel_Num__c</fullName>
        <description>Parcel_Num</description>
        <label>Parcel_Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percent_Agr__c</fullName>
        <description>Percent_Agr</description>
        <label>Percent_Agr</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Number__c</fullName>
        <description>Permit_Number</description>
        <label>Permit_Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pev_Inc__c</fullName>
        <description>Pev_Inc</description>
        <label>Pev_Inc</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pgeaccount_Elec__c</fullName>
        <description>Pgeaccount_Elec</description>
        <label>Pgeaccount_Elec</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pgeaccount_Gas__c</fullName>
        <description>Pgeaccount_Gas</description>
        <label>Pgeaccount_Gas</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pgeaccount_Type__c</fullName>
        <description>Pgeaccount_Type</description>
        <label>Pgeaccount_Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Place_Attach__c</fullName>
        <description>Place_Attach</description>
        <label>Place_Attach</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planner_Group__c</fullName>
        <description>Planner_Group</description>
        <label>Planner_Group</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Premise_Type__c</fullName>
        <description>Premise_Type</description>
        <label>Premise_Type</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectDef__c</fullName>
        <description>ProjectDef</description>
        <label>ProjectDef</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>Project_Name</description>
        <label>Project_Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>Project_Type</description>
        <label>Project_Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qrtr_Gas_Press__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qrtr_Gas_Press</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Schedule_E__c</fullName>
        <description>Rate_Schedule_E</description>
        <label>Rate_Schedule_E</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Schedule_G__c</fullName>
        <description>Rate_Schedule_G</description>
        <label>Rate_Schedule_G</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Relocation</description>
        <label>Relocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Root_NotifNumber__c</fullName>
        <description>Root_NotifNumber</description>
        <label>Root_NotifNumber</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_ObjNumber__c</fullName>
        <description>Root_ObjNumber</description>
        <label>Root_ObjNumber</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seasonal_Load_E__c</fullName>
        <description>Seasonal_Load_E</description>
        <label>Seasonal_Load_E</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Code__c</fullName>
        <description>Security_Code</description>
        <label>Security_Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Gen__c</fullName>
        <description>Self_Gen</description>
        <label>Self_Gen</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selfgen_Power__c</fullName>
        <description>Selfgen_Power</description>
        <label>Selfgen_Power</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selfgen_Type__c</fullName>
        <description>Selfgen_Type</description>
        <label>Selfgen_Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selfgen_Units__c</fullName>
        <description>Selfgen_Units</description>
        <label>Selfgen_Units</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Elec__c</fullName>
        <description>Service_Elec</description>
        <label>Service_Elec</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_For__c</fullName>
        <description>Service_For</description>
        <label>Service_For</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Gas__c</fullName>
        <description>Service_Gas</description>
        <label>Service_Gas</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Start__c</fullName>
        <description>Service_Start</description>
        <label>Service_Start</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Num_E__c</fullName>
        <description>Services_Num_E</description>
        <label>Services_Num_E</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Num_G__c</fullName>
        <description>Services_Num_G</description>
        <label>Services_Num_G</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Services_Num__c</fullName>
        <description>Services_Num</description>
        <label>Services_Num</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sh_Address__c</fullName>
        <description>Sh_Address</description>
        <label>Sh_Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sh_City__c</fullName>
        <description>Sh_City</description>
        <label>Sh_City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sign_Recvd__c</fullName>
        <description>Sign_Recvd</description>
        <label>Sign_Recvd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sq_Footage_Avg__c</fullName>
        <description>Sq_Footage_Avg</description>
        <label>Sq_Footage_Avg</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sq_Footage_Lrg__c</fullName>
        <description>Sq_Footage_Lrg</description>
        <label>Sq_Footage_Lrg</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Agr_Eq__c</fullName>
        <description>Srv_Cr_Agr_Eq</description>
        <label>Srv_Cr_Agr_Eq</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Bld_Strc__c</fullName>
        <description>Srv_Cr_Bld_Strc</description>
        <label>Srv_Cr_Bld_Strc</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Deck__c</fullName>
        <description>Srv_Cr_Deck</description>
        <label>Srv_Cr_Deck</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Na__c</fullName>
        <description>Srv_Cr_Na</description>
        <label>Srv_Cr_Na</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Neighbor__c</fullName>
        <description>Srv_Cr_Neighbor</description>
        <label>Srv_Cr_Neighbor</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Notsure__c</fullName>
        <description>Srv_Cr_Notsure</description>
        <label>Srv_Cr_Notsure</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Priv_Rd__c</fullName>
        <description>Srv_Cr_Priv_Rd</description>
        <label>Srv_Cr_Priv_Rd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Pub_Rd__c</fullName>
        <description>Srv_Cr_Pub_Rd</description>
        <label>Srv_Cr_Pub_Rd</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Swim__c</fullName>
        <description>Srv_Cr_Swim</description>
        <label>Srv_Cr_Swim</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srv_Cr_Trolley__c</fullName>
        <description>Srv_Cr_Trolley</description>
        <label>Srv_Cr_Trolley</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srvc_Source__c</fullName>
        <description>Srvc_Source</description>
        <label>Srvc_Source</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Srvce_Wire_Ins_E__c</fullName>
        <description>Srvce_Wire_Ins_E</description>
        <label>Srvce_Wire_Ins_E</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State</description>
        <label>State</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stateofincorp__c</fullName>
        <description>Stateofincorp</description>
        <label>Stateofincorp</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Calls__c</fullName>
        <description>Status_Calls</description>
        <label>Status_Calls</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submit_Date__c</fullName>
        <description>Submit_Date</description>
        <label>Submit_Date</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subpump__c</fullName>
        <description>Subpump</description>
        <label>Subpump</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supply__c</fullName>
        <description>Supply</description>
        <label>Supply</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tot_Loads__c</fullName>
        <description>Tot_Loads</description>
        <label>Tot_Loads</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tract_Num__c</fullName>
        <description>Tract_Num</description>
        <label>Tract_Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trench_End__c</fullName>
        <description>Trench_End</description>
        <label>Trench_End</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trench_Start__c</fullName>
        <description>Trench_Start</description>
        <label>Trench_Start</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Two_Gas_Press__c</fullName>
        <description>Two_Gas_Press</description>
        <label>Two_Gas_Press</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Type__c</fullName>
        <description>Unit_Type</description>
        <label>Unit_Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Urg_Req__c</fullName>
        <description>Urg_Req</description>
        <label>Urg_Req</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Propane_G__c</fullName>
        <description>Use_Propane_G</description>
        <label>Use_Propane_G</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voltage_Other__c</fullName>
        <description>Voltage_Other</description>
        <label>Voltage_Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voltage__c</fullName>
        <description>Voltage</description>
        <label>Voltage</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <description>Work_Type</description>
        <label>Work_Type</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <description>Zipcode</description>
        <label>Zipcode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>KB Detail</label>
    <nameField>
        <label>KB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KB Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>